fix: h1 and Table of contents overflow

--- a/static/css/theme-override.css
+++ b/static/css/theme-override.css
@@ -2,6 +2,11 @@ footer { font-size: 90%;}
 p{
     text-indent: 2em; /*首行缩进*/
 }
+h1 {
+    word-wrap: break-word;
+    white-space: normal;
+    line-height: 1.3;
+}
 
 a[href^="#fn:"]:before{ content: '[' }
 a[href^="#fn:"]:after{ content: ']' }
